feat: Avalanche - Integration between Avalanche and Pytorch Lightning

--- a/src/configuration/train.ini
+++ b/src/configuration/train.ini
@@ -1,10 +1,9 @@
 [training]
-gpus = 0,
-batch_size = 1
-resume_ckpt_path = ./checkpoints
-max_epochs = 2000
+gpus =
+batch_size = 5
+max_epochs = 2
 validate_every_n = 2
-num_workers = 12
+num_workers = 2
 accumulate_grad_batches = 5
 learning_rate = 0.001
 
