--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["ewriji <ewriji@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.11"
 tqdm = "^4.64.0"
 pydantic = "^1.9.1"
 plotly = "^5.9.0"
@@ -16,6 +16,7 @@ torch = "^1.12.0"
 torchvision = "^0.13.0"
 torchaudio = "^0.12.0"
 pytorch-lightning = "^1.6.5"
+avalanche-lib = "^0.2.1"
 
 [build-system]
 requires = ["poetry-core"]
