--- a/requirements_colab.txt
+++ b/requirements_colab.txt
@@ -2,7 +2,7 @@ tqdm==4.64.0
 pydantic==1.9.1
 plotly==5.9.0
 wandb==0.12.21
-pandas==1.4.3
+pandas
 torch==1.12.0
 torchvision==0.13.0
 torchaudio==0.12.0
