--- a/src/configuration/train.ini
+++ b/src/configuration/train.ini
@@ -8,6 +8,6 @@ accumulate_grad_batches = 5
 learning_rate = 0.001
 
 [logging]
-evaluation_logger_type =
-train_logger_type =
+evaluation_logger =
+train_logger =
 logging_path = logs
