feat: Avalanche - requirements

--- a/src/configuration/train.ini
+++ b/src/configuration/train.ini
@@ -11,3 +11,9 @@ learning_rate = 0.001
 evaluation_logger =
 train_logger =
 logging_path = logs
+
+[model]
+input_dim = 100
+num_random_images = 32
+l2_threshold = 0.5
+rnd_latent_dim = 200
