feat: Avalanche - requirements

--- a/src/configuration/train.ini
+++ b/src/configuration/train.ini
@@ -17,4 +17,4 @@ input_dim = 100
 num_random_images = 32
 l2_threshold = 0.5
 rnd_latent_dim = 200
-generator_checkpoint =
+generator_checkpoint = ./artifacts/mnist_gan_generator:v0/generator.pth
