feat: Avalanche - requirements

--- a/src/configuration/train.ini
+++ b/src/configuration/train.ini
@@ -8,7 +8,7 @@ accumulate_grad_batches = 5
 learning_rate = 0.001
 
 [logging]
-evaluation_logger = wandb
+evaluation_logger = interactive
 train_logger =
 logging_path = logs
 
