feat: Avalanche - requirements

--- a/src/configuration/train.ini
+++ b/src/configuration/train.ini
@@ -1,6 +1,6 @@
 [training]
 gpus =
-batch_size = 5
+batch_size = 512
 max_epochs = 2
 validate_every_n = 2
 num_workers = 2
@@ -8,7 +8,7 @@ accumulate_grad_batches = 5
 learning_rate = 0.001
 
 [logging]
-evaluation_logger = interactive
+evaluation_logger = wandb
 train_logger =
 logging_path = logs
 
