feat: Avalanche - requirements

--- a/src/configuration/train.ini
+++ b/src/configuration/train.ini
@@ -1,14 +1,14 @@
 [training]
 gpus =
 batch_size = 512
-max_epochs = 2
+max_epochs = 1
 validate_every_n = 2
 num_workers = 2
 accumulate_grad_batches = 5
 learning_rate = 0.001
 
 [logging]
-evaluation_logger = wandb
+evaluation_logger = interactive
 train_logger =
 logging_path = logs
 
