feat: Avalanche - Add accuracy metrics

--- a/src/configuration/train.ini
+++ b/src/configuration/train.ini
@@ -13,6 +13,7 @@ train_logger = wandb
 logging_path = logs
 
 [model]
+image_generation_batch_size = 20
 input_dim = 100
 num_random_images = 32
 l2_threshold = 0.5
