--- a/src/configuration/train.ini
+++ b/src/configuration/train.ini
@@ -1,8 +1,8 @@
 [training]
 accelerator = mps
 devices = 0,
-batch_size = 512
-max_epochs = 1
+batch_size = 128
+max_epochs = 6
 validate_every_n = 2
 num_workers = 2
 accumulate_grad_batches = 5
@@ -17,6 +17,7 @@ logging_path = logs
 image_generation_batch_size = 20
 input_dim = 100
 num_random_images = 32
-l2_threshold = 0.5
+l2_threshold = 0.3
 rnd_latent_dim = 200
-generator_checkpoint = ./artifacts/mnist_gan_generator:v0/generator.pth
+generator_type = vae
+generator_checkpoint = ./artifacts/mnist_vae_generator:v0/vae_decoder.pth
