feat: Training - Add VAE generator

--- a/src/configuration/train.ini
+++ b/src/configuration/train.ini
@@ -17,7 +17,8 @@ logging_path = logs
 image_generation_batch_size = 20
 input_dim = 100
 num_random_images = 32
-l2_threshold = 0.1
+num_generation_attempts = 100
+l2_threshold = 0.003
 rnd_latent_dim = 200
 generator_type = vae
 generator_checkpoint = ./artifacts/mnist_vae_generator:v0/vae_decoder.pth
