--- a/src/rnd/configuration/train.ini
+++ b/src/rnd/configuration/train.ini
@@ -3,6 +3,7 @@ accelerator = mps
 devices = 0,
 batch_size = 128
 max_epochs = 6
+min_epochs = 1
 validate_every_n = 2
 num_workers = 2
 accumulate_grad_batches = 5
