--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,54 @@
 absl-py==1.3.0 ; python_version >= "3.10" and python_version < "3.11"
 aiohttp==3.8.3 ; python_version >= "3.10" and python_version < "3.11"
-aiosignal==1.2.0 ; python_version >= "3.10" and python_version < "3.11"
+aiosignal==1.3.1 ; python_version >= "3.10" and python_version < "3.11"
 async-timeout==4.0.2 ; python_version >= "3.10" and python_version < "3.11"
 attrs==22.1.0 ; python_version >= "3.10" and python_version < "3.11"
 avalanche-lib==0.2.1 ; python_version >= "3.10" and python_version < "3.11"
 beautifulsoup4==4.11.1 ; python_version >= "3.10" and python_version < "3.11"
 cachetools==5.2.0 ; python_version >= "3.10" and python_version < "3.11"
-certifi==2022.9.24 ; python_version >= "3.10" and python_version < "3.11"
+certifi==2022.12.7 ; python_version >= "3.10" and python_version < "3.11"
 charset-normalizer==2.1.1 ; python_version >= "3.10" and python_version < "3.11"
 click==8.1.3 ; python_version >= "3.10" and python_version < "3.11"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "3.11" and platform_system == "Windows"
 contourpy==1.0.6 ; python_version >= "3.10" and python_version < "3.11"
 cycler==0.11.0 ; python_version >= "3.10" and python_version < "3.11"
 docker-pycreds==0.4.0 ; python_version >= "3.10" and python_version < "3.11"
-filelock==3.8.0 ; python_version >= "3.10" and python_version < "3.11"
-fire==0.4.0 ; python_version >= "3.10" and python_version < "3.11"
+filelock==3.8.2 ; python_version >= "3.10" and python_version < "3.11"
 fonttools==4.38.0 ; python_version >= "3.10" and python_version < "3.11"
-frozenlist==1.3.1 ; python_version >= "3.10" and python_version < "3.11"
-fsspec[http]==2022.10.0 ; python_version >= "3.10" and python_version < "3.11"
-gdown==4.5.3 ; python_version >= "3.10" and python_version < "3.11"
-gitdb==4.0.9 ; python_version >= "3.10" and python_version < "3.11"
+frozenlist==1.3.3 ; python_version >= "3.10" and python_version < "3.11"
+fsspec[http]==2022.11.0 ; python_version >= "3.10" and python_version < "3.11"
+gdown==4.6.0 ; python_version >= "3.10" and python_version < "3.11"
+gitdb==4.0.10 ; python_version >= "3.10" and python_version < "3.11"
 gitpython==3.1.29 ; python_version >= "3.10" and python_version < "3.11"
 google-auth-oauthlib==0.4.6 ; python_version >= "3.10" and python_version < "3.11"
-google-auth==2.14.0 ; python_version >= "3.10" and python_version < "3.11"
+google-auth==2.15.0 ; python_version >= "3.10" and python_version < "3.11"
 gputil==1.4.0 ; python_version >= "3.10" and python_version < "3.11"
-grpcio==1.50.0 ; python_version >= "3.10" and python_version < "3.11"
+grpcio==1.51.1 ; python_version >= "3.10" and python_version < "3.11"
 idna==3.4 ; python_version >= "3.10" and python_version < "3.11"
 joblib==1.2.0 ; python_version >= "3.10" and python_version < "3.11"
 kiwisolver==1.4.4 ; python_version >= "3.10" and python_version < "3.11"
-lightning-lite==1.8.0 ; python_version >= "3.10" and python_version < "3.11"
-lightning-utilities==0.3.0 ; python_version >= "3.10" and python_version < "3.11"
+lightning-utilities==0.4.2 ; python_version >= "3.10" and python_version < "3.11"
 markdown==3.4.1 ; python_version >= "3.10" and python_version < "3.11"
 markupsafe==2.1.1 ; python_version >= "3.10" and python_version < "3.11"
 matplotlib==3.6.2 ; python_version >= "3.10" and python_version < "3.11"
-multidict==6.0.2 ; python_version >= "3.10" and python_version < "3.11"
-numpy==1.23.4 ; python_version >= "3.10" and python_version < "3.11"
+multidict==6.0.3 ; python_version >= "3.10" and python_version < "3.11"
+numpy==1.23.5 ; python_version >= "3.10" and python_version < "3.11"
 oauthlib==3.2.2 ; python_version >= "3.10" and python_version < "3.11"
-packaging==21.3 ; python_version >= "3.10" and python_version < "3.11"
-pandas==1.5.1 ; python_version >= "3.10" and python_version < "3.11"
+packaging==22.0 ; python_version >= "3.10" and python_version < "3.11"
+pandas==1.5.2 ; python_version >= "3.10" and python_version < "3.11"
 pathtools==0.1.2 ; python_version >= "3.10" and python_version < "3.11"
 pillow==9.3.0 ; python_version >= "3.10" and python_version < "3.11"
 plotly==5.11.0 ; python_version >= "3.10" and python_version < "3.11"
 promise==2.3 ; python_version >= "3.10" and python_version < "3.11"
-protobuf==3.19.6 ; python_version >= "3.10" and python_version < "3.11"
-psutil==5.9.3 ; python_version >= "3.10" and python_version < "3.11"
+protobuf==3.20.1 ; python_version >= "3.10" and python_version < "3.11"
+psutil==5.9.4 ; python_version >= "3.10" and python_version < "3.11"
 pyasn1-modules==0.2.8 ; python_version >= "3.10" and python_version < "3.11"
 pyasn1==0.4.8 ; python_version >= "3.10" and python_version < "3.11"
 pydantic==1.10.2 ; python_version >= "3.10" and python_version < "3.11"
 pyparsing==3.0.9 ; python_version >= "3.10" and python_version < "3.11"
 pysocks==1.7.1 ; python_version >= "3.10" and python_version < "3.11"
 python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "3.11"
-pytorch-lightning==1.8.0 ; python_version >= "3.10" and python_version < "3.11"
+pytorch-lightning==1.8.5.post0 ; python_version >= "3.10" and python_version < "3.11"
 pytorchcv==0.0.67 ; python_version >= "3.10" and python_version < "3.11"
 pytz==2022.6 ; python_version >= "3.10" and python_version < "3.11"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "3.11"
@@ -59,31 +57,30 @@ requests-oauthlib==1.3.1 ; python_version >= "3.10" and python_version < "3.11"
 requests==2.28.1 ; python_version >= "3.10" and python_version < "3.11"
 requests[socks]==2.28.1 ; python_version >= "3.10" and python_version < "3.11"
 rsa==4.9 ; python_version >= "3.10" and python_version < "3.11"
-scikit-learn==1.1.3 ; python_version >= "3.10" and python_version < "3.11"
+scikit-learn==1.2.0 ; python_version >= "3.10" and python_version < "3.11"
 scipy==1.9.3 ; python_version >= "3.10" and python_version < "3.11"
-sentry-sdk==1.10.1 ; python_version >= "3.10" and python_version < "3.11"
+sentry-sdk==1.12.0 ; python_version >= "3.10" and python_version < "3.11"
 setproctitle==1.3.2 ; python_version >= "3.10" and python_version < "3.11"
-setuptools-scm==7.0.5 ; python_version >= "3.10" and python_version < "3.11"
 setuptools==59.5.0 ; python_version >= "3.10" and python_version < "3.11"
-shortuuid==1.0.9 ; python_version >= "3.10" and python_version < "3.11"
+shortuuid==1.0.11 ; python_version >= "3.10" and python_version < "3.11"
 six==1.16.0 ; python_version >= "3.10" and python_version < "3.11"
 smmap==5.0.0 ; python_version >= "3.10" and python_version < "3.11"
 soupsieve==2.3.2.post1 ; python_version >= "3.10" and python_version < "3.11"
 tenacity==8.1.0 ; python_version >= "3.10" and python_version < "3.11"
 tensorboard-data-server==0.6.1 ; python_version >= "3.10" and python_version < "3.11"
 tensorboard-plugin-wit==1.8.1 ; python_version >= "3.10" and python_version < "3.11"
-tensorboard==2.10.1 ; python_version >= "3.10" and python_version < "3.11"
-termcolor==2.1.0 ; python_version >= "3.10" and python_version < "3.11"
+tensorboard==2.11.0 ; python_version >= "3.10" and python_version < "3.11"
+tensorboardx==2.5.1 ; python_version >= "3.10" and python_version < "3.11"
 threadpoolctl==3.1.0 ; python_version >= "3.10" and python_version < "3.11"
-tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
+torch-summary==1.4.5 ; python_version >= "3.10" and python_version < "3.11"
 torch==1.12.1 ; python_version >= "3.10" and python_version < "3.11"
 torchaudio==0.12.1 ; python_version >= "3.10" and python_version < "3.11"
-torchmetrics==0.10.2 ; python_version >= "3.10" and python_version < "3.11"
+torchmetrics==0.11.0 ; python_version >= "3.10" and python_version < "3.11"
 torchvision==0.13.1 ; python_version >= "3.10" and python_version < "3.11"
 tqdm==4.64.1 ; python_version >= "3.10" and python_version < "3.11"
 typing-extensions==4.4.0 ; python_version >= "3.10" and python_version < "3.11"
-urllib3==1.26.12 ; python_version >= "3.10" and python_version < "3.11"
+urllib3==1.26.13 ; python_version >= "3.10" and python_version < "3.11"
 wandb==0.12.21 ; python_version >= "3.10" and python_version < "3.11"
 werkzeug==2.2.2 ; python_version >= "3.10" and python_version < "3.11"
-wheel==0.37.1 ; python_version >= "3.10" and python_version < "3.11"
-yarl==1.8.1 ; python_version >= "3.10" and python_version < "3.11"
+wheel==0.38.4 ; python_version >= "3.10" and python_version < "3.11"
+yarl==1.8.2 ; python_version >= "3.10" and python_version < "3.11"
