feat: VAE - better config

--- a/src/vae_ft/configuration/train.ini
+++ b/src/vae_ft/configuration/train.ini
@@ -2,11 +2,11 @@
 accelerator = mps
 devices = 0,
 batch_size = 32
-max_epochs = 300
-min_epochs = 50
+max_epochs = 2
+min_epochs = 1
 validate_every_n = 2
 num_workers = 2
-accumulate_grad_batches = 5
+accumulate_grad_batches =
 learning_rate = 0.001
 
 [logging]
