--- a/src/vae_ft/configuration/train.ini
+++ b/src/vae_ft/configuration/train.ini
@@ -1,10 +1,10 @@
 [training]
-accelerator = mps
+accelerator = gpu
 devices = 0,
 batch_size = 32
 max_epochs = 300
 min_epochs = 50
-validate_every_n = 2
+validate_every_n = 5
 num_workers = 2
 accumulate_grad_batches =
 learning_rate = 0.001
