feat: VAE - better config

--- a/src/vae_ft/configuration/train.ini
+++ b/src/vae_ft/configuration/train.ini
@@ -10,8 +10,8 @@ accumulate_grad_batches =
 learning_rate = 0.001
 
 [logging]
-evaluation_logger =
-train_logger =
+evaluation_logger = wandb
+train_logger = wandb
 logging_path = logs
 
 [model]
