--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ torchaudio = "^0.12.0"
 pytorch-lightning = "^1.6.5"
 avalanche-lib = "^0.2.1"
 torch-summary = "^1.4.5"
+submitit = "^1.4.5"
 
 [tool.poetry.group.dev.dependencies]
 lovely-tensors = "^0.1.10"
