--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = ">=3.10,<3.11"
 tqdm = "^4.64.0"
 pydantic = "^1.9.1"
 plotly = "^5.9.0"
-wandb = "^0.12.21"
+wandb = "^0.13.10"
 pandas = "^1.4.3"
 torch = "^1.12.0"
 torchvision = "^0.13.0"
@@ -19,6 +19,7 @@ pytorch-lightning = "^1.6.5"
 avalanche-lib = "^0.2.1"
 torch-summary = "^1.4.5"
 submitit = "^1.4.5"
+joblib = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 lovely-tensors = "^0.1.10"
