--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==1.4.0 ; python_version >= "3.10" and python_version < "3.11"
 aiohttp==3.8.4 ; python_version >= "3.10" and python_version < "3.11"
 aiosignal==1.3.1 ; python_version >= "3.10" and python_version < "3.11"
+appdirs==1.4.4 ; python_version >= "3.10" and python_version < "3.11"
 async-timeout==4.0.2 ; python_version >= "3.10" and python_version < "3.11"
 attrs==22.2.0 ; python_version >= "3.10" and python_version < "3.11"
 avalanche-lib==0.2.1 ; python_version >= "3.10" and python_version < "3.11"
@@ -40,8 +41,7 @@ pandas==1.5.3 ; python_version >= "3.10" and python_version < "3.11"
 pathtools==0.1.2 ; python_version >= "3.10" and python_version < "3.11"
 pillow==9.4.0 ; python_version >= "3.10" and python_version < "3.11"
 plotly==5.13.0 ; python_version >= "3.10" and python_version < "3.11"
-promise==2.3 ; python_version >= "3.10" and python_version < "3.11"
-protobuf==3.20.3 ; python_version >= "3.10" and python_version < "3.11"
+protobuf==4.22.0 ; python_version >= "3.10" and python_version < "3.11"
 psutil==5.9.4 ; python_version >= "3.10" and python_version < "3.11"
 pyasn1-modules==0.2.8 ; python_version >= "3.10" and python_version < "3.11"
 pyasn1==0.4.8 ; python_version >= "3.10" and python_version < "3.11"
@@ -63,7 +63,6 @@ scipy==1.10.0 ; python_version >= "3.10" and python_version < "3.11"
 sentry-sdk==1.15.0 ; python_version >= "3.10" and python_version < "3.11"
 setproctitle==1.3.2 ; python_version >= "3.10" and python_version < "3.11"
 setuptools==59.5.0 ; python_version >= "3.10" and python_version < "3.11"
-shortuuid==1.0.11 ; python_version >= "3.10" and python_version < "3.11"
 six==1.16.0 ; python_version >= "3.10" and python_version < "3.11"
 smmap==5.0.0 ; python_version >= "3.10" and python_version < "3.11"
 soupsieve==2.4 ; python_version >= "3.10" and python_version < "3.11"
@@ -81,7 +80,7 @@ torchvision==0.13.1 ; python_version >= "3.10" and python_version < "3.11"
 tqdm==4.64.1 ; python_version >= "3.10" and python_version < "3.11"
 typing-extensions==4.5.0 ; python_version >= "3.10" and python_version < "3.11"
 urllib3==1.26.14 ; python_version >= "3.10" and python_version < "3.11"
-wandb==0.12.21 ; python_version >= "3.10" and python_version < "3.11"
+wandb==0.13.10 ; python_version >= "3.10" and python_version < "3.11"
 werkzeug==2.2.3 ; python_version >= "3.10" and python_version < "3.11"
 wheel==0.38.4 ; python_version >= "3.10" and python_version < "3.11"
 yarl==1.8.2 ; python_version >= "3.10" and python_version < "3.11"
