--- a/src/vae_ft/configuration/train.ini
+++ b/src/vae_ft/configuration/train.ini
@@ -20,3 +20,6 @@ z_dim = 2
 model_backbone = mlp
 num_random_images = 5000
 num_random_noise = 5000
+regularization = ''
+regularization_dropout = 0.5
+regularization_lambda = 0.01
