--- a/src/rnd/configuration/train.ini
+++ b/src/rnd/configuration/train.ini
@@ -8,6 +8,7 @@ validate_every_n = 2
 num_workers = 2
 accumulate_grad_batches = 5
 learning_rate = 0.001
+dataset_path = '/work/dzverev/mnist'
 
 [logging]
 evaluation_logger = wandb
