feat: training - add sweep support

--- a/src/vae_ft/configuration/train.ini
+++ b/src/vae_ft/configuration/train.ini
@@ -8,7 +8,7 @@ validate_every_n = 2
 num_workers = 2
 accumulate_grad_batches =
 learning_rate = 0.001
-dataset_path = '/work/dzverev/mnist'
+dataset_path =
 
 [logging]
 evaluation_logger = wandb
@@ -21,6 +21,5 @@ z_dim = 2
 model_backbone = mlp
 num_random_images = 5000
 num_random_noise = 5000
-regularization = ''
-regularization_dropout = 0.5
-regularization_lambda = 0.01
+regularization_dropout = 0.0
+regularization_lambda = 0.0
