--- a/src/vae_ft/sweeps/regularisation_vs_random_noise.yaml
+++ b/src/vae_ft/sweeps/regularisation_vs_random_noise.yaml
@@ -6,9 +6,9 @@ parameters:
   model_backbone:
     values: [cnn, mlp]
   num_random_images:
-    values: [0, 500, 1000, 3000, 5000, 7000]
+    values: [0, 100, 500, 1000, 1500, 2000, 2500, 3000, 3500, 4000, 4500, 5000, 5500, 6000, 6500, 7000]
   num_random_noise:
-    values: [0, 100, 500, 1000, 2000, 3000, 5000]
+    values: [0, 100, 500, 1000, 1500, 2000, 2500, 3000, 3500, 4000, 4500, 5000]
   regularization_dropout:
     values: [0.0, 0.15, 0.2, 0.25, 0.3, 0.4, 0.5]
   regularization_lambda:
