--- a/src/vae_ft/sweeps/regularisation_vs_random_noise.yaml
+++ b/src/vae_ft/sweeps/regularisation_vs_random_noise.yaml
@@ -12,7 +12,7 @@ parameters:
   regularization_dropout:
     values: [0.0, 0.15, 0.2, 0.25, 0.3, 0.4, 0.5]
   regularization_lambda:
-    values: [0.0, 0.001, 0.002, 0.003, 0.004, 0.01, 0.05, 0.1]
+    values: [0.0, 0.001, 0.002, 0.003, 0.004, 0.005, 0.01, 0.02, 0.03, 0.05, 0.1]
   learning_rate:
     distribution: uniform
     min: 0.00001
