--- a/src/vae_ft/configuration/train.ini
+++ b/src/vae_ft/configuration/train.ini
@@ -9,6 +9,7 @@ num_workers = 2
 accumulate_grad_batches =
 learning_rate = 0.001
 dataset_path =
+best_model_prefix =
 
 [logging]
 evaluation_logger = wandb
