--- a/src/vq_vae/configuration/train.ini
+++ b/src/vq_vae/configuration/train.ini
@@ -4,6 +4,8 @@ devices = 0,
 batch_size = 256
 max_epochs = 300
 min_epochs = 40
+max_epochs_lin_eval = 200
+min_epochs_lin_eval = 0
 validate_every_n = 2
 num_workers = 2
 accumulate_grad_batches =
