--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,15 +12,16 @@ pydantic = "^1.9.1"
 plotly = "^5.9.0"
 wandb = "^0.13.10"
 pandas = "^1.4.3"
-torch = "^1.12.0"
-torchvision = "^0.13.0"
-torchaudio = "^0.12.0"
+torch = "^2.0.0"
+torchvision = "^0.15.1"
+torchaudio = "^2.0.1"
 pytorch-lightning = "^1.6.5"
 avalanche-lib = "^0.2.1"
 torch-summary = "^1.4.5"
 submitit = "^1.4.5"
 joblib = "^1.2.0"
 lpips = "^0.1.4"
+jupyter = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 lovely-tensors = "^0.1.10"
