feat: VQ-VAE - fix logging errors and templates

--- a/src/vq_vae/configuration/train.ini
+++ b/src/vq_vae/configuration/train.ini
@@ -10,8 +10,8 @@ validate_every_n = 2
 num_workers = 2
 accumulate_grad_batches =
 learning_rate = 0.001
-dataset_path =
-best_model_prefix =
+dataset_path = /work/dzverev/datasets
+best_model_prefix = /scratch/shared/beegfs/dzverev/artifacts
 
 [logging]
 evaluation_logger = wandb
