--- a/src/vq_vae/configuration/train.ini
+++ b/src/vq_vae/configuration/train.ini
@@ -8,7 +8,7 @@ max_epochs_lin_eval = 200
 min_epochs_lin_eval = 0
 validate_every_n = 2
 num_workers = 4
-accumulate_grad_batches =
+accumulate_grad_batches = 1
 learning_rate = 0.001
 dataset_path = /work/dzverev/datasets
 best_model_prefix = /scratch/shared/beegfs/dzverev/artifacts
