feat: VQ-VAE - Fast attention

--- a/src/transformer_vq_vae/sweeps/reg_loss_hp.yaml
+++ b/src/transformer_vq_vae/sweeps/reg_loss_hp.yaml
@@ -3,10 +3,8 @@ metric:
   goal: minimize
   name: val/reconstruction_loss/experience_step_0
 parameters:
-  embeddings_distance:
-    values: [cosine, l2]
-  batch_size:
-    values: [128, 256, 512, 768, 1024]
+  accumulate_grad_batches:
+    values: [1, 2, 4, 6, 8]
   num_embeddings:
     values: [128, 256, 512, 768, 1024]
   embedding_dim:
