feat: VQ-VAE - Fast attention

--- a/src/vq_vae/configuration/train.ini
+++ b/src/vq_vae/configuration/train.ini
@@ -6,6 +6,8 @@ max_epochs = 300
 min_epochs = 40
 max_epochs_lin_eval = 200
 min_epochs_lin_eval = 0
+max_epochs_igpt = 30
+min_epochs_igpt = 10
 validate_every_n = 2
 num_workers = 4
 accumulate_grad_batches = 1
@@ -27,6 +29,7 @@ embedding_dim = 64
 commitment_cost = 0.25
 decay = 0.99
 num_random_noise = 0
+num_random_images = 0
 regularization_lambda = 0.0
 regularization_dropout = 0.0
 use_lpips = False
