feat: VQ-VAE - Fast attention

--- a/src/vq_vae/configuration/train.ini
+++ b/src/vq_vae/configuration/train.ini
@@ -12,7 +12,7 @@ validate_every_n = 2
 num_workers = 4
 accumulate_grad_batches = 1
 learning_rate = 0.001
-dataset_path = /work/dzverev/datasets
+dataset_path = /scratch/shared/beegfs/dzverev/datasets
 best_model_prefix = /scratch/shared/beegfs/dzverev/artifacts
 
 [logging]
