--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -10,6 +10,8 @@ validate_every_n = 2
 num_workers = 4
 accumulate_grad_batches = 1
 learning_rate = 0.001
+weight_decay = 0.05
+
 dataset_path = /scratch/shared/beegfs/dzverev/datasets
 best_model_prefix = /scratch/shared/beegfs/dzverev/artifacts
 
@@ -37,3 +39,4 @@ reconstruction_loss_weight = 1
 contrastive_loss_loss_weight = 1
 encoder_mlm_loss_loss_weight = 1
 decoder_regression_loss_loss_weight = 1
+mask_ratio = 0.75
