--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ pandas = "^1.4.3"
 torch = "^2.0.0"
 torchvision = "^0.15.1"
 torchaudio = "^2.0.1"
-pytorch-lightning = "^1.6.5"
-avalanche-lib = "^0.2.1"
+pytorch-lightning = "^2.0.2"
+avalanche-lib = "^0.3.1"
 torch-summary = "^1.4.5"
 submitit = "^1.4.5"
 joblib = "^1.2.0"
@@ -24,6 +24,7 @@ lpips = "^0.1.4"
 jupyter = "^1.0.0"
 einops = "^0.6.1"
 timm = "^0.6.13"
+chainer = "^7.8.1"
 
 [tool.poetry.group.dev.dependencies]
 lovely-tensors = "^0.1.10"
