feat: Transformer-VQ-VAE - New implementation

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -13,12 +13,13 @@ learning_rate = 0.001
 weight_decay = 0.05
 
 dataset_path = /scratch/shared/beegfs/dzverev/datasets
-best_model_prefix = /scratch/shared/beegfs/dzverev/artifacts
+best_model_prefix = /scratch/shared/beegfs/dzverev/artifacts/best_model
 
 [logging]
 evaluation_logger = wandb
 train_logger = wandb
 logging_path = logs
+checkpoint_path = /scratch/shared/beegfs/dzverev/artifacts/model
 
 [model]
 num_hiddens = 128
