feat: Transformer-VQ-VAE - New implementation

--- a/src/vq_vae/configuration/train.ini
+++ b/src/vq_vae/configuration/train.ini
@@ -19,6 +19,7 @@ best_model_prefix = /scratch/shared/beegfs/dzverev/artifacts
 evaluation_logger = wandb
 train_logger = wandb
 logging_path = logs
+checkpoint_path = /scratch/shared/beegfs/dzverev/artifacts/model
 
 [model]
 num_hiddens = 128
