feat: Transformer-VQ-VAE - New implementation

--- a/src/vq_vae/configuration/train.ini
+++ b/src/vq_vae/configuration/train.ini
@@ -19,7 +19,7 @@ best_model_prefix = /scratch/shared/beegfs/dzverev/artifacts
 evaluation_logger = wandb
 train_logger = wandb
 logging_path = logs
-checkpoint_path = /scratch/shared/beegfs/dzverev/artifacts/model
+checkpoint_path = /scratch/shared/beegfs/dzverev/artifacts
 
 [model]
 num_hiddens = 128
@@ -39,3 +39,4 @@ corruption_rate = 0.2
 vq_loss_weight = 1
 reconstruction_loss_weight = 1
 downstream_loss_weight = 1
+bootstrapped_dataset_path = /scratch/shared/beegfs/dzverev/artifacts
