feat: Transformer-VQ-VAE - New implementation

--- a/src/vq_vae/configuration/train.ini
+++ b/src/vq_vae/configuration/train.ini
@@ -29,8 +29,9 @@ num_embeddings = 512
 embedding_dim = 64
 commitment_cost = 0.25
 decay = 0.99
-num_random_noise = 0
-num_random_images = 0
+num_random_future_samples = 0
+num_random_past_samples = 0
+future_samples_mode = noise
 regularization_lambda = 0.0
 regularization_dropout = 0.0
 use_lpips = False
