feat: Transformer-VQ-VAE - New implementation

--- a/src/vq_vae/configuration/train.ini
+++ b/src/vq_vae/configuration/train.ini
@@ -4,7 +4,7 @@ devices = auto
 batch_size = 256
 max_epochs = 300
 min_epochs = 40
-max_epochs_lin_eval = 200
+max_epochs_lin_eval = 300
 min_epochs_lin_eval = 0
 max_epochs_igpt = 30
 min_epochs_igpt = 10
@@ -32,6 +32,8 @@ decay = 0.99
 num_random_future_samples = 0
 num_random_past_samples = 0
 future_samples_mode = noise
+sampling_temperature = 1.0
+num_gpt_layers = 12
 regularization_lambda = 0.0
 regularization_dropout = 0.0
 use_lpips = False
