--- a/src/vq_vae/sweeps/bootstrap_hp.yaml
+++ b/src/vq_vae/sweeps/bootstrap_hp.yaml
@@ -1,21 +1,27 @@
 method: random
 metric:
   goal: maximize
-  name: val/all_cls_accuracy/experience_step_0
+  name: val/observed_only_cls_accuracy/experience_step_4
 parameters:
-  embeddings_distance:
-    values: [ cosine, l2 ]
-  corruption_rate:
-    values: [ 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ]
-  contrastive_loss_loss_weight:
+  max_epochs_igpt:
+    values: [ 40, 80, 120, 200, 300]
+  accumulate_grad_batches:
+    values: [ 1, 2, 4]
+  downstream_loss_weight:
+    values: [ 0, 1]
+  num_random_future_samples:
     distribution: uniform
-    min: 0.001
-    max: 1
-  encoder_mlm_loss_loss_weight:
+    min: 0
+    max: 10000
+  num_random_past_samples:
     distribution: uniform
-    min: 0.001
-    max: 1
-  decoder_regression_loss_loss_weight:
+    min: 0
+    max: 10000
+  future_samples_mode:
+    values: [noise, noise_out, uniform_prior]
+  sampling_temperature:
     distribution: uniform
-    min: 0.001
-    max: 1
+    min: 0
+    max: 1.5
+  num_gpt_layers:
+    values: [12, 24]
