feat: Transformer-VQ-VAE - New implementation

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -29,7 +29,10 @@ num_embeddings = 512
 embedding_dim = 64
 commitment_cost = 0.25
 decay = 0.99
-num_random_noise = 0
+num_random_future_samples = 0
+num_random_past_samples = 0
+future_samples_mode = noise
+sampling_temperature = 1.0
 regularization_lambda = 0.0
 regularization_dropout = 0.0
 use_lpips = False
@@ -41,3 +44,5 @@ contrastive_loss_loss_weight = 1
 encoder_mlm_loss_loss_weight = 1
 decoder_regression_loss_loss_weight = 1
 mask_ratio = 0.75
+num_gpt_layers = 12
+bootstrapped_dataset_path = /scratch/shared/beegfs/dzverev/artifacts
