feat: Transformer-VQ-VAE - notebooks

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -2,12 +2,12 @@
 accelerator = gpu
 devices = auto
 batch_size = 256
-max_epochs = 300
-min_epochs = 40
-max_epochs_lin_eval = 200
+max_epochs = 1500
+min_epochs = 500
+max_epochs_lin_eval = 300
 min_epochs_lin_eval = 0
 validate_every_n = 2
-num_workers = 4
+num_workers = 8
 accumulate_grad_batches = 1
 learning_rate = 0.001
 weight_decay = 0.05
@@ -29,10 +29,6 @@ num_embeddings = 512
 embedding_dim = 64
 commitment_cost = 0.25
 decay = 0.99
-num_random_future_samples = 0
-num_random_past_samples = 0
-future_samples_mode = noise
-sampling_temperature = 1.0
 regularization_lambda = 0.0
 regularization_dropout = 0.0
 use_lpips = False
@@ -43,6 +39,18 @@ reconstruction_loss_weight = 1
 contrastive_loss_loss_weight = 1
 encoder_mlm_loss_loss_weight = 1
 decoder_regression_loss_loss_weight = 1
+
+[sampling]
+num_random_future_samples = 0
+num_random_past_samples = 0
+future_samples_mode = noise
+sampling_temperature = 1.0
+bootstrapped_dataset_path = /scratch/shared/beegfs/dzverev/artifacts
+
+[igpt]
 mask_ratio = 0.75
 num_gpt_layers = 12
-bootstrapped_dataset_path = /scratch/shared/beegfs/dzverev/artifacts
+igpt_batch_size = 64
+igpt_accumulate_grad_batches = 1
+igpt_mask_ratio = 0.1
+igpt_mask_token_weight = 0.95
