--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-absl-py==1.4.0 ; python_version >= "3.10" and python_version < "3.11"
+Rabsl-py==1.4.0 ; python_version >= "3.10" and python_version < "3.11"
 aiohttp==3.8.4 ; python_version >= "3.10" and python_version < "3.11"
 aiosignal==1.3.1 ; python_version >= "3.10" and python_version < "3.11"
 anyio==3.6.2 ; python_version >= "3.10" and python_version < "3.11"
