feat: Transformer-VQ-VAE - new way to model future

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -11,6 +11,7 @@ num_workers = 8
 accumulate_grad_batches = 1
 learning_rate = 0.001
 weight_decay = 0.05
+precision = 32-true
 
 dataset_path = /scratch/shared/beegfs/dzverev/datasets
 best_model_prefix = /scratch/shared/beegfs/dzverev/artifacts
