feat: Transformer-VQ-VAE - separate embeddings for class

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -24,6 +24,7 @@ checkpoint_path = /scratch/shared/beegfs/dzverev/artifacts
 
 [model]
 num_embeddings = 128
+num_class_embeddings = 64
 embedding_dim = 192
 commitment_cost = 0.25
 decay = 0.99
