--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -36,6 +36,7 @@ num_random_future_samples = 0
 num_random_past_samples = 0
 future_samples_mode = noise
 bootstrapped_dataset_path = /scratch/shared/beegfs/dzverev/artifacts
+temperature = 1.23
 
 [igpt]
 mask_ratio = 0.75
