--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -30,6 +30,7 @@ commitment_cost = 0.25
 decay = 0.99
 use_lpips = False
 corruption_rate = 0.75
+cycle_consistency_loss_weight = 1.0
 
 [sampling]
 num_random_future_samples = 0
