feat: Transformer-VQ-VAE - cycle loss backbone

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -35,6 +35,7 @@ cycle_consistency_loss_weight = 1.0
 [sampling]
 num_random_future_samples = 0
 num_random_past_samples = 0
+num_random_past_samples_schedule = fixed
 future_samples_mode = noise
 bootstrapped_dataset_path = /scratch/shared/beegfs/dzverev/artifacts
 temperature = 1.23
