feat: Transformer-VQ-VAE - cycle loss backbone

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -28,7 +28,7 @@ num_class_embeddings = 64
 embedding_dim = 192
 commitment_cost = 0.25
 decay = 0.99
-use_lpips = False
+use_lpips = True
 corruption_rate = 0.75
 cycle_consistency_loss_weight = 1.0
 
