--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -32,6 +32,7 @@ use_lpips = False
 corruption_rate = 0.75
 cycle_consistency_loss_weight = 0
 current_samples_loss_weight = 1
+cycle_consistency_sigma = 1
 
 [sampling]
 num_random_future_samples = 0
