--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -33,6 +33,7 @@ corruption_rate = 0.75
 cycle_consistency_loss_weight = 0
 current_samples_loss_weight = 1
 cycle_consistency_sigma = 1
+quantize_features = True
 
 [sampling]
 num_random_future_samples = 0
