feat: Transformer-VQ-VAE - cycle loss backbone

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -15,6 +15,7 @@ precision = 32-true
 
 dataset_path = /scratch/shared/beegfs/dzverev/datasets
 best_model_prefix = /scratch/shared/beegfs/dzverev/artifacts
+num_tasks = 5
 
 [logging]
 evaluation_logger = wandb
