--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -35,6 +35,7 @@ cycle_consistency_loss_weight = 0
 current_samples_loss_weight = 1
 cycle_consistency_sigma = 1
 quantize_features = True
+quantize_top_k = 3
 
 [sampling]
 num_random_future_samples = 0
