fix: topk - fix top error for k=1 in imgp dataset

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -46,6 +46,7 @@ num_random_past_samples_schedule = fixed
 future_samples_mode = noise
 bootstrapped_dataset_path = /scratch/shared/beegfs/dzverev/artifacts
 temperature = 1.23
+reuse_igpt = True
 
 [igpt]
 mask_ratio = 0.75
