fix: topk - fix top error for k=1 in imgp dataset

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -40,6 +40,8 @@ future_samples_loss_weight = 1
 quantize_features = True
 separate_codebooks = True
 quantize_top_k = 3
+class_perplexity_threshold = 0
+patches_perplexity_threshold = 150
 
 [sampling]
 num_random_future_samples = 0
