--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -25,6 +25,7 @@ checkpoint_path = /scratch/shared/beegfs/dzverev/artifacts
 
 [model]
 num_embeddings = 24
+num_embeddings_per_step = 5
 num_class_embeddings = 2
 embedding_dim = 192
 commitment_cost = 0.25
