feat: image gpt - remove separate codebook

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -43,6 +43,8 @@ separate_codebooks = True
 quantize_top_k = 3
 class_perplexity_threshold = 0
 patches_perplexity_threshold = 150
+image_size = 32
+patch_size = 2
 
 [sampling]
 num_random_future_samples = 0
