feat: image gpt - remove separate codebook

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -43,6 +43,7 @@ separate_codebooks = True
 quantize_top_k = 1
 class_perplexity_threshold = 0
 patches_perplexity_threshold = 150
+dataset = cifar10
 image_size = 32
 patch_size = 4
 
