feat: image gpt - remove separate codebook

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -46,6 +46,7 @@ patches_perplexity_threshold = 150
 dataset = cifar10
 image_size = 32
 patch_size = 2
+supervised = False
 
 [sampling]
 num_random_future_samples = 0
