feat: image gpt - remove separate codebook

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -12,10 +12,12 @@ accumulate_grad_batches = 1
 learning_rate = 0.001
 weight_decay = 0.05
 precision = 32-true
-
+warmup = 200
 dataset_path = /scratch/shared/beegfs/dzverev/datasets
 best_model_prefix = /scratch/shared/beegfs/dzverev/artifacts
 num_tasks = 5
+dataset = cifar10
+image_size = 32
 
 [logging]
 evaluation_logger = wandb
@@ -24,6 +26,7 @@ logging_path = logs
 checkpoint_path = /scratch/shared/beegfs/dzverev/artifacts
 
 [model]
+# model parameters
 num_embeddings = 24
 num_embeddings_per_step = 5
 num_class_embeddings = 2
@@ -31,22 +34,25 @@ embedding_dim = 192
 commitment_cost = 0.25
 decay = 0.99
 use_lpips = True
+encoder_layer = 12
+encoder_head = 3
+decoder_layer = 4
+decoder_head = 3
 corruption_rate = 0.75
+perplexity_threshold = 150
+patch_size = 2
+supervised = False
+# quantization params
+quantize_features = True
+quantize_top_k = 1
+# loss coefficients
 cycle_consistency_loss_weight_for_past = 0
 cycle_consistency_loss_weight_for_current = 0
 cycle_consistency_sigma = 1
 past_samples_loss_weight = 1
 current_samples_loss_weight = 1
 future_samples_loss_weight = 1
-quantize_features = True
-separate_codebooks = True
-quantize_top_k = 1
-class_perplexity_threshold = 0
-patches_perplexity_threshold = 150
-dataset = cifar10
-image_size = 32
-patch_size = 2
-supervised = False
+data_variance = 0.06328692405746414
 
 [sampling]
 num_random_future_samples = 0
