feat: image gpt - remove separate codebook

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -31,6 +31,7 @@ num_embeddings = 24
 num_embeddings_per_step = 5
 num_class_embeddings = 2
 embedding_dim = 192
+decoder_embedding_dim = 192
 commitment_cost = 0.25
 decay = 0.99
 use_lpips = True
