feat: image gpt - remove separate codebook

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -1,6 +1,7 @@
 [training]
 accelerator = cuda
 devices = auto
+strategy = auto
 batch_size = 128
 max_epochs = 500
 min_epochs = 500
@@ -40,6 +41,7 @@ future_samples_loss_weight = 1
 quantize_features = True
 separate_codebooks = True
 quantize_top_k = 3
+supervised = False
 
 [sampling]
 num_random_future_samples = 0
