feat: image gpt - remove separate codebook

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -47,6 +47,7 @@ supervised = False
 num_random_future_samples = 0
 num_random_past_samples = 0
 num_random_past_samples_schedule = fixed
+num_epochs_schedule = fixed
 future_samples_mode = noise
 bootstrapped_dataset_path = /scratch/shared/beegfs/dzverev/artifacts
 temperature = 1.23
