--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -14,6 +14,8 @@ learning_rate = 0.001
 weight_decay = 0.05
 precision = 32-true
 
+image_size = 32
+dataset = cifar10
 dataset_path = /scratch/shared/beegfs/dzverev/datasets
 best_model_prefix = /scratch/shared/beegfs/dzverev/artifacts
 num_tasks = 5
