--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -13,6 +13,7 @@ accumulate_grad_batches = 1
 learning_rate = 0.001
 weight_decay = 0.05
 precision = 32-true
+save_model_every = 100
 
 image_size = 32
 dataset = cifar10
