feat: no randaug

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -14,6 +14,7 @@ learning_rate = 0.001
 weight_decay = 0.05
 precision = 32-true
 save_model_every = 100
+augment = default
 
 image_size = 32
 dataset = cifar10
