feat: balanced sample

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -4,6 +4,7 @@ devices = auto
 batch_size = 128
 max_epochs = 500
 min_epochs = 500
+num_epochs_schedule = fixed
 max_epochs_lin_eval = 100
 min_epochs_lin_eval = 0
 validate_every_n = 2
