feat: balanced sample - DDP version

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -38,6 +38,8 @@ cycle_consistency_loss_weight = 0
 current_samples_loss_weight = 1
 cycle_consistency_sigma = 1
 quantize_features = True
+supervised = False
+memory_buffer_size = 2000
 
 [sampling]
 num_random_future_samples = 0
