feat: balanced sample - DDP version

--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -52,6 +52,8 @@ temperature = 1.23
 [igpt]
 mask_ratio = 0.75
 num_gpt_layers = 12
+igpt_num_epochs_max = 15
+igpt_num_epochs_min = 10
 igpt_batch_size = 64
 igpt_accumulate_grad_batches = 1
 igpt_mask_ratio = 0.1
