--- a/src/transformer_vq_vae/configuration/train.ini
+++ b/src/transformer_vq_vae/configuration/train.ini
@@ -36,6 +36,7 @@ use_lpips = True
 corruption_rate = 0.75
 cycle_consistency_loss_weight = 0
 current_samples_loss_weight = 1
+past_samples_loss_weight = 1
 cycle_consistency_sigma = 1
 quantize_features = True
 supervised = False
