--- a/src/qmae_latent_extension/configuration/train.ini
+++ b/src/qmae_latent_extension/configuration/train.ini
@@ -28,7 +28,7 @@ checkpoint_path = /scratch/shared/beegfs/dzverev/artifacts
 
 [model]
 num_embeddings = 128
-num_class_embeddings = 64
+num_embeddings_per_step = 64
 embedding_dim = 192
 commitment_cost = 0.25
 decay = 0.99
