feat: qmae - improve fid score script

--- a/src/qmae_latent_extension/configuration/train.ini
+++ b/src/qmae_latent_extension/configuration/train.ini
@@ -30,6 +30,7 @@ checkpoint_path = /scratch/shared/beegfs/dzverev/artifacts
 num_embeddings = 128
 num_embeddings_per_step = 64
 embedding_dim = 192
+img_embedding_dim = 192
 commitment_cost = 0.25
 decay = 0.99
 use_lpips = True
